improve lint setting on frontend

--- a/web/components/lib/templates/node.yaml
+++ b/web/components/lib/templates/node.yaml
@@ -4,14 +4,14 @@ metadata:
 spec: {}
 status:
   capacity:
-    cpu: '4'
+    cpu: "4"
     memory: 32Gi
-    pods: '110'
+    pods: "110"
   allocatable:
-    cpu: '4'
+    cpu: "4"
     memory: 32Gi
-    pods: '110'
+    pods: "110"
   phase: Running
   conditions:
     - type: Ready
-      status: 'True'
+      status: "True"
