--- a/web/components/lib/templates/pod.yaml
+++ b/web/components/lib/templates/pod.yaml
@@ -13,7 +13,7 @@ spec:
         requests:
           cpu: 100m
           memory: 16Gi
-      terminationMessagePath: '/dev/termination-log'
+      terminationMessagePath: "/dev/termination-log"
       terminationMessagePolicy: File
       imagePullPolicy: IfNotPresent
   restartPolicy: Always
