--- a/web/package.json
+++ b/web/package.json
@@ -7,10 +7,12 @@
     "build": "nuxt build",
     "start": "nuxt start",
     "generate": "nuxt generate",
-    "format": "prettier --write .",
-    "lint:js": "eslint --ext \".js,.vue\" --ignore-path .gitignore .",
-    "lint:css": "stylelint \"**/**.{css,scss,sass}\"",
-    "lint": "yarn lint:js lint:css",
+    "eslint": "eslint --ext \".js,.vue,.ts\" .",
+    "eslint:fix": "eslint --ext \".js,.vue,.ts\" --fix .",
+    "stylelint": "stylelint \"**/**.{css,scss,sass}\"",
+    "lint": "yarn eslint && yarn stylelint",
+    "prettier:fix": "prettier --write .",
+    "format": "yarn eslint:fix && yarn prettier:fix",
     "test": "jest"
   },
   "dependencies": {
@@ -29,17 +31,20 @@
     "@nuxtjs/eslint-config-typescript": "^6.0.0",
     "@nuxtjs/eslint-module": "^3.0.2",
     "@nuxtjs/vuetify": "^1.11.3",
+    "@typescript-eslint/eslint-plugin": "^4.29.3",
+    "@typescript-eslint/parser": "^4.29.3",
+    "@vue/eslint-config-typescript": "^7.0.0",
     "@vue/test-utils": "^1.1.3",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^26.6.3",
-    "eslint": "^7.22.0",
-    "eslint-config-prettier": "^8.1.0",
+    "eslint": "^7.32.0",
+    "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-nuxt": "^2.0.0",
-    "eslint-plugin-prettier": "^3.3.1",
-    "eslint-plugin-vue": "^7.7.0",
+    "eslint-plugin-prettier": "^3.4.1",
+    "eslint-plugin-vue": "^7.0.0-beta.4",
     "jest": "^26.6.3",
-    "prettier": "^2.2.1",
+    "prettier": "^2.3.2",
     "stylelint": "^13.13.1",
     "stylelint-config-standard": "^22.0.0",
     "ts-jest": "^26.5.4",
