--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "submodules/kubernetes"]
 	path = submodules/kubernetes
-	url = git@github.com:kubernetes/kubernetes.git
+	url = https://github.com/kubernetes/kubernetes.git
