--- a/.github/workflows/lint-frontend.yml
+++ b/.github/workflows/lint-frontend.yml
@@ -32,5 +32,5 @@ jobs:
         run: npm install -g yarn
       - name: Install
         run: yarn install --frozen-lockfile
-      - name: Test
+      - name: Lint
         run: yarn run lint
