fix node version

--- a/.github/workflows/lint-frontend.yml
+++ b/.github/workflows/lint-frontend.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Setup Node.js v16
         uses: actions/setup-node@v2
         with:
-          node-version: 16.x
+          node-version: 16
       - uses: actions/cache@v2
         with:
           path: ${YARN_CACHE_FOLDER}
