Fix lint frontend action to run for all changes under /web dir

--- a/.github/workflows/lint-frontend.yml
+++ b/.github/workflows/lint-frontend.yml
@@ -5,7 +5,7 @@ on:
   pull_request:
     types: [opened, synchronize]
     paths:
-      - "web"
+      - 'web/**'
 
 env:
   YARN_CACHE_FOLDER: .cache/yarn
