--- a/web/components/lib/templates/priorityclass.yaml
+++ b/web/components/lib/templates/priorityclass.yaml
@@ -1,5 +1,6 @@
+
 metadata:
-  name: default-priority-class
+  name: priority-class
 value: 1000
 globalDefault: true
-description: "Default priority class for all pods"
+description: "This is a template priority class for all pods"
