--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,8 @@ services:
     container_name: simulator-frontend
     environment:
       - HOST=0.0.0.0
+      - BASE_URL=http://localhost:1212
+      - KUBE_API_SERVER_URL=http://localhost:3131
     ports:
     - "3000:3000"
     tty: true
