Rename the environment variable FRONTEND_URL to CORS_ALLOWED_ORIGIN_LIST and accept list

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     environment:
       - PORT=1212
       - KUBE_SCHEDULER_SIMULATOR_ETCD_URL=http://simulator-etcd:2379
-      - FRONTEND_URL=http://localhost:3000
+      - CORS_ALLOWED_ORIGIN_LIST=http://localhost:3000
       - KUBE_API_HOST=0.0.0.0
       - KUBE_API_PORT=3131
     ports:
