--- a/simulator/Makefile
+++ b/simulator/Makefile
@@ -1,6 +1,6 @@
 .PHONY: generate
-generate: vendor
-	go generate ./... && \
+generate: format
+	go generate ./...
 
 # re-generate openapi file for running api-server
 .PHONY: openapi
@@ -13,6 +13,7 @@ lint:
 
 .PHONY: format
 format:
+	find . -name "*.go" | grep -v "vendor" | grep -v "submodule" | xargs gci write --Section Standard --Section Default --Section "Prefix(sigs.k8s.io/kube-scheduler-simulator/simulator)"
 	golangci-lint run --fix ./...
 
 .PHONY: test
