Add --build_flags=--mod=mod flag to handle vendor in mockgen reflect mode

--- a/simulator/Makefile
+++ b/simulator/Makefile
@@ -1,6 +1,7 @@
 .PHONY: generate
-generate: format
+generate:
 	go generate ./...
+	make format
 
 # re-generate openapi file for running api-server
 .PHONY: openapi
