--- a/web/tsconfig.eslint.json
+++ b/web/tsconfig.eslint.json
@@ -1,7 +1,5 @@
 {
   "extends": "./tsconfig.json",
-  "include": ["src/**/*.ts",
-    ".eslintrc.js"
-  ],
+  "include": ["src/**/*.ts", ".eslintrc.js"],
   "exclude": ["node_modules", "dist"]
 }
