--- a/web/components/lib/templates/pod.yaml
+++ b/web/components/lib/templates/pod.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   containers:
     - name: pause
-      image: k8s.gcr.io/pause:3.5
+      image: registry.k8s.io/pause:3.5
       resources:
         limits:
           cpu: 100m
