implement the external scheduler integration

--- a/simulator/.golangci.yml
+++ b/simulator/.golangci.yml
@@ -1,3 +1,6 @@
+run:
+  skip-dirs:
+    - docs
 linters-settings:
   # if you fix this gci config, you should modify the gci command on `make format` as well.
   gci:
