--- a/simulator/.golangci.yml
+++ b/simulator/.golangci.yml
@@ -13,6 +13,37 @@ linters-settings:
     disabled-checks:
       - appendAssign
 
+  revive:
+    rules:
+      # default settings
+      # from: https://github.com/mgechev/revive/blob/master/defaults.toml
+      - name: blank-imports
+      - name: context-as-argument
+      - name: context-keys-type
+      - name: dot-imports
+      - name: error-return
+      - name: error-strings
+      - name: error-naming
+      - name: exported
+      - name: if-return
+      - name: increment-decrement
+      - name: var-naming
+      - name: var-declaration
+      - name: package-comments
+      - name: range
+      - name: receiver-naming
+      - name: time-naming
+      - name: unexported-return
+      - name: indent-error-flow
+      - name: errorf
+      - name: empty-block
+      - name: superfluous-else
+      - name: unused-parameter
+      - name: unreachable-code
+      - name: redefines-builtin-id
+      # additional settings
+      - name: duplicated-imports
+
 linters:
   disable-all: true
   enable:
