--- a/docker-compose-local.yml
+++ b/docker-compose-local.yml
@@ -5,13 +5,13 @@ services:
     container_name: simulator-server
     environment:
       - PORT=1212
-      - KUBE_SCHEDULER_SIMULATOR_ETCD_URL=http://simulator-etcd:2379
+      - KUBE_SCHEDULER_SIMULATOR_ETCD_URL=http://127.0.0.1:32765
       - CORS_ALLOWED_ORIGIN_LIST=http://${SIMULATOR_EXTERNAL_IP:-localhost}:3000
       - KUBE_API_HOST=0.0.0.0
-      - KUBE_API_PORT=3131
+      - KUBE_API_PORT=32765
     ports:
       - "1212:1212"
-      - "3131:3131"
+      - "32765:32765"
     restart: always
     tty: true
     networks:
@@ -23,21 +23,10 @@ services:
     environment:
       - HOST=0.0.0.0
       - BASE_URL=http://${SIMULATOR_EXTERNAL_IP:-localhost}:1212
-      - KUBE_API_SERVER_URL=http://${SIMULATOR_EXTERNAL_IP:-localhost}:3131
+      - KUBE_API_SERVER_URL=http://${SIMULATOR_EXTERNAL_IP:-localhost}:32765
     ports:
     - "3000:3000"
     tty: true
-  simulator-etcd:
-    image: quay.io/coreos/etcd:v3.4.26
-    container_name: simulator-etcd
-    restart: always
-    volumes:
-      - simulator-etcd-data:/var/lib/etcd
-    command: etcd --advertise-client-urls http://simulator-etcd:2379 --data-dir /var/lib/etcd --listen-client-urls http://0.0.0.0:2379 --initial-cluster-state new --initial-cluster-token tkn
-    networks:
-      - simulator-internal-network
-volumes:
-  simulator-etcd-data:
 networks:
   simulator-internal-network:
     driver: bridge
