fix: docker compose
Signed-off-by: sivchari <shibuuuu5@gmail.com>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,6 +33,8 @@ services:
     volumes:
       - simulator-etcd-data:/var/lib/etcd
       - ./kwok.yaml:/root/.kwok/kwok.yaml
+    networks:
+      - simulator-internal-network
 networks:
   simulator-internal-network:
     driver: bridge
