--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,7 +25,7 @@ services:
     - "3000:3000"
     tty: true
   simulator-cluster:
-    image: registry.k8s.io/kwok/cluster:v0.5.0-k8s.v1.29.0
+    image: registry.k8s.io/kwok/cluster:v0.5.1-k8s.v1.29.0
     container_name: simulator-cluster
     restart: always
     ports:
@@ -33,6 +33,8 @@ services:
     volumes:
       - simulator-etcd-data:/var/lib/etcd
       - ./kwok.yaml:/root/.kwok/kwok.yaml
+    environment:
+      - KWOK_KUBE_APISERVER_PORT=3131
     networks:
       - simulator-internal-network
 networks:
