--- a/simulator/Dockerfile
+++ b/simulator/Dockerfile
@@ -11,7 +11,7 @@ COPY go.mod go.sum ./
 RUN go mod download
 
 COPY . .
-RUN go build -v -o ./bin/simulator simulator.go
+RUN go build -v -o ./bin/simulator ./cmd/simulator/simulator.go
 
 FROM alpine:3.14.0
 
