--- a/simulator/Makefile
+++ b/simulator/Makefile
@@ -23,7 +23,4 @@ mod-download: ## Downloads the Go module
 .PHONY: build
 build:  
 	go build -o ./bin/simulator ./cmd/simulator/simulator.go
-
-.PHONY: start
-start: build
-	./hack/start_simulator.sh
+	go build -o ./bin/scheduler ./cmd/scheduler/scheduler.go
