use --config flag instead of KUBECONFIG

--- a/simulator/cmd/scheduler/Dockerfile
+++ b/simulator/cmd/scheduler/Dockerfile
@@ -20,4 +20,6 @@ FROM alpine:3.14.0
 COPY --from=build-env /go/src/simulator/bin/scheduler /scheduler
 RUN chmod a+x /scheduler
 
-CMD ["/scheduler"]
+COPY ./docs/sample/debuggable-scheduler/scheduler.yaml ./docs/sample/debuggable-scheduler/kubeconfig.yaml ./
+
+CMD ["/scheduler", "--config", "scheduler.yaml", "--master", "http://simulator-cluster:3131"]
