--- a/simulator/cmd/simulator/Dockerfile
+++ b/simulator/cmd/simulator/Dockerfile
@@ -1,7 +1,10 @@
 FROM golang:1.22 AS build-env
 
-ENV GOOS=linux
-ENV GOARCH=amd64
+ARG TARGETOS
+ARG TARGETARCH
+
+ENV GOOS=${TARGETOS:-linux}
+ENV GOARCH=${TARGETARCH}
 ENV CGO_ENABLED=0
 ENV GO111MODULE=on
 
