Share configuration files using volumes

--- a/docker-compose-local.yml
+++ b/docker-compose-local.yml
@@ -9,6 +9,8 @@ services:
       - simulator-internal-network
     depends_on:
       - simulator-cluster
+    volumes:
+      - sched-conf:/config
   simulator-server:
     image: simulator-server
     container_name: simulator-server
@@ -24,6 +26,7 @@ services:
       - simulator-internal-network
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
+      - sched-conf:/config
   simulator-frontend:
     image: simulator-frontend
     restart: always
@@ -33,7 +36,7 @@ services:
       - BASE_URL=http://${SIMULATOR_EXTERNAL_IP:-localhost}:1212
       - KUBE_API_SERVER_URL=http://${SIMULATOR_EXTERNAL_IP:-localhost}:3131
     ports:
-    - "3000:3000"
+      - "3000:3000"
     tty: true
   simulator-cluster:
     image: registry.k8s.io/kwok/cluster:v0.5.1-k8s.v1.29.0
@@ -53,3 +56,9 @@ networks:
     driver: bridge
 volumes:
   simulator-etcd-data:
+  sched-conf:
+    driver: local
+    driver_opts:
+      type: none
+      device: ${PWD}/simulator/cmd/scheduler
+      o: bind
