--- a/docker-compose-local.yml
+++ b/docker-compose-local.yml
@@ -9,6 +9,8 @@ services:
       - simulator-internal-network
     depends_on:
       - simulator-cluster
+    environment:
+      - KUBECONFIG=/config/kubeconfig.yaml
     volumes:
       - sched-conf:/config
   simulator-server:
@@ -18,6 +20,7 @@ services:
       - PORT=1212
       - KUBE_SCHEDULER_SIMULATOR_ETCD_URL=http://simulator-cluster:2379
       - KUBE_APISERVER_URL=http://simulator-cluster:3131
+      - KUBE_SCHEDULER_CONFIG_PATH=/config/scheduler.yaml
     ports:
       - "1212:1212"
     restart: always
