--- a/simulator/config.yaml
+++ b/simulator/config.yaml
@@ -22,7 +22,7 @@ corsAllowedOriginList:
 # This is for the beta feature "Importing cluster's resources".
 # This variable is used to find Kubeconfig required to access your
 # cluster for importing resources to scheduler simulator.
-kubeConfig: ""
+kubeConfig: "/kubeconfig.yaml"
 
 # This is the url of kube-apiserver.
 # This variable is used to connect to the user cluster's kube-apiserver.
