rename debug profile to externalImportEnabled

--- a/docker-compose-local.yml
+++ b/docker-compose-local.yml
@@ -69,7 +69,7 @@ services:
     networks:
       - simulator-internal-network
     profiles:
-      - debug
+      - externalImportEnabled
 networks:
   simulator-internal-network:
     driver: bridge
