--- a/simulator/kubeconfig.yaml
+++ b/simulator/kubeconfig.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 clusters:
 - cluster:
-    server: http://debug-real-cluster:3132
+    server: http://fake-source-cluster:3132
   name: kwok
 contexts:
 - context:
