--- a/docker-compose-local.yml
+++ b/docker-compose-local.yml
@@ -19,12 +19,19 @@ services:
       - PORT=1212
       - KUBE_SCHEDULER_SIMULATOR_ETCD_URL=http://simulator-cluster:2379
       - KUBE_APISERVER_URL=http://simulator-cluster:3131
+    volumes:
+      - ./simulator/config.yaml:/config.yaml
+      - ./simulator/kubeconfig.yaml:/kubeconfig.yaml
     ports:
       - "1212:1212"
     restart: always
     tty: true
     networks:
       - simulator-internal-network
+    depends_on:
+      fake-source-cluster:
+        condition: "service_healthy"
+        required: false
   simulator-frontend:
     image: simulator-frontend
     restart: always
@@ -49,6 +56,23 @@ services:
       - KWOK_KUBE_APISERVER_PORT=3131
     networks:
       - simulator-internal-network
+  fake-source-cluster:
+    image: registry.k8s.io/kwok/cluster:v0.6.0-k8s.v1.30.2
+    container_name: fake-source-cluster
+    restart: always
+    healthcheck:
+      test: "kwokctl kubectl get nodes"
+      start_period: 60s
+      start_interval: 1s
+      interval: 600s
+    ports:
+      - "3132:3132"
+    environment:
+      - KWOK_KUBE_APISERVER_PORT=3132
+    networks:
+      - simulator-internal-network
+    profiles:
+      - externalImportEnabled
 networks:
   simulator-internal-network:
     driver: bridge
