--- a/simulator/config.yaml
+++ b/simulator/config.yaml
@@ -19,7 +19,8 @@ etcdURL: "http://127.0.0.1:2379"
 corsAllowedOriginList:
   - "http://localhost:3000"
 
-# This is for the beta feature "Importing cluster's resources".
+# This is for the beta feature "One-shot importing cluster's resources"
+# and "Continuous syncing cluster's resources".
 # This variable is used to find Kubeconfig required to access your
 # cluster for importing resources to scheduler simulator.
 kubeConfig: "/kubeconfig.yaml"
@@ -35,9 +36,17 @@ kubeApiServerUrl: ""
 kubeSchedulerConfigPath: ""
 
 # This variable indicates whether the simulator will
-# import resources from an user cluster's or not.
-# Note, this is still a beta feature.
+# import resources from a user cluster specified by kubeConfig.
+# Note that it only imports the resources once when the simulator is started.
+# You cannot make both externalImportEnabled and resourceSyncEnabled true because those features would be conflicted.
+# This is still a beta feature.
 externalImportEnabled: false
+
+# This variable indicates whether the simulator will
+# keep syncing resources from an user cluster's or not.
+# You cannot make both externalImportEnabled and resourceSyncEnabled true because those features would be conflicted.
+# Note, this is still a beta feature.
+resourceSyncEnabled: false
 
 # This variable indicates whether an external scheduler
 # is used.
