--- a/docker-compose-local.yml
+++ b/docker-compose-local.yml
@@ -1,13 +1,20 @@
 version: "3.7"
 services:
+  init-container:
+      image: busybox
+      volumes:
+        - conf:/config
+        - ${PWD}/simulator/cmd/scheduler:/host-config:ro    
+      command: sh -c "cp -rf /host-config/* /config/"
   simulator-scheduler:
     image: simulator-scheduler
     container_name: simulator-scheduler
     environment:
-      - KUBE_APISERVER_URL=http://simulator-cluster:3131
-      - KUBECONFIG=/root/.kube/kubeconfig.yaml
+      - KUBECONFIG=/config/kubeconfig.yaml
     volumes:
-      - ./simulator/docs/sample/debuggable-scheduler/kubeconfig.yaml:/root/.kube/kubeconfig.yaml
+      - conf:/config
+    depends_on:
+      - init-container
     restart: always
     tty: true
     networks:
@@ -19,9 +26,12 @@ services:
       - PORT=1212
       - KUBE_SCHEDULER_SIMULATOR_ETCD_URL=http://simulator-cluster:2379
       - KUBE_APISERVER_URL=http://simulator-cluster:3131
+      - KUBE_SCHEDULER_CONFIG_PATH=/config/scheduler.yaml
     volumes:
       - ./simulator/config.yaml:/config.yaml
       - ./simulator/kubeconfig.yaml:/kubeconfig.yaml
+      - /var/run/docker.sock:/var/run/docker.sock
+      - conf:/config
     ports:
       - "1212:1212"
     restart: always
@@ -78,3 +88,4 @@ networks:
     driver: bridge
 volumes:
   simulator-etcd-data:
+  conf:
