--- a/simulator/cmd/scheduler/kubeconfig.yaml
+++ b/simulator/cmd/scheduler/kubeconfig.yaml
@@ -3,7 +3,7 @@ kind: Config
 
 clusters:
   - cluster:
-      server: http://localhost:3131
+      server: http://simulator-cluster:3131
     name: simulator
 
 contexts:
