--- a/simulator/cmd/scheduler/Dockerfile
+++ b/simulator/cmd/scheduler/Dockerfile
@@ -26,4 +26,5 @@ RUN chmod a+x /scheduler
 
 COPY ./cmd/scheduler/scheduler.yaml ./cmd/scheduler/kubeconfig.yaml ./
 
-CMD ["/scheduler", "--config", "/config/scheduler.yaml"]
+
+CMD ["/scheduler", "--config", "/config/scheduler.yaml", "--master", "http://simulator-cluster:3131"]
