Simulate scheduler with debuggable scheduler container (#370)
* move simulator entrypoint to simulator/cmd/simulator

* fix config position

* fix Dockerfile

* can restart pod from server

* fix docker-compose

* tweak

* tweak

* update extender.md

* delete StartScheduler

* tweak

* delete unused func

* add --master option

* rename WriteConfig to UpdateSchedulerConfig, and write func description RestartScheduler

* tweak errors

* refactor restartContainer

* delete unnecessary file copy

* scheduler config use default config

* extender example

* tweak

* tweak

* add comment to init-container

* add error log for restartContainer

* tweak

* fix extender document

* %w -> %v

* fix can't find simulator-scheduler case

* add comment

* return error when failed init

* update how-it-works.md

* change log text

* bug fix

--- a/simulator/cmd/scheduler/Dockerfile
+++ b/simulator/cmd/scheduler/Dockerfile
@@ -24,4 +24,4 @@ FROM alpine:3.14.0
 COPY --from=build-env /go/src/simulator/bin/scheduler /scheduler
 RUN chmod a+x /scheduler
 
-CMD ["/scheduler"]
+CMD ["/scheduler", "--config", "/config/scheduler.yaml", "--master", "http://simulator-cluster:3131"]
