update secnario by kubebuilder v4 (#396)

--- a/scenario/config/rbac/scenario_viewer_role.yaml
+++ b/scenario/config/rbac/scenario_viewer_role.yaml
@@ -1,7 +1,16 @@
-# permissions for end users to view scenarios.
+# This rule is not used by the project scenario itself.
+# It is provided to allow the cluster admin to help manage permissions for users.
+#
+# Grants read-only access to simulation.kube-scheduler-simulator.x-k8s.io resources.
+# This role is intended for users who need visibility into these resources
+# without permissions to modify them. It is ideal for monitoring purposes and limited-access viewing.
+
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
+  labels:
+    app.kubernetes.io/name: scenario
+    app.kubernetes.io/managed-by: kustomize
   name: scenario-viewer-role
 rules:
 - apiGroups:
