--- a/simulator/.golangci.yml
+++ b/simulator/.golangci.yml
@@ -59,7 +59,6 @@ linters:
     - dogsled
     - durationcheck
     - errorlint
-    - exportloopref
     - forcetypeassert
     - funlen
     - gci
@@ -68,7 +67,7 @@ linters:
     - gocritic
     - gocyclo
     - godot
-    - goerr113
+    - err113
     - gofmt
     - gofumpt
     - gosec
